# movieScraper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml  movieScraperBot.yml  python-package-conda.yml
